Improve IRQ timings of Sys3/4/6/7/11, DE and the Sega 192x64 DMD-machines
Change switch writing of DE and Sega 192x64 DMD-machines
Improve sound filtering of Flash Gordon, Xenon and all Williams/Bally DCS machines, matching the real one more closely
Improve timings for GTS80 machines, especially for Rack 'em up until Tag-Team (1983-85 era)

*** ROM SUPPORT *** Thanks to Soren, ipdb.org, Silvio Finotti, tecnopinball.org, inkochnito, Carlos Paredes Compan, Matt Morin, Chad Hendrickson
New:
Jac van Ham: Formula 1
             Ice Mania
Sport Matic: Flashman

Clones:
Addams Family, The L-5C (competition MOD) (updated with LED Ghost Fix)
Brave Team (Free Play)
Canasta '86' (Free Play)
Cirqus Voltaire (D.52 Prototype w/ support for old Ringmaster voice) - sound ROMs missing however
Clown (Inder, Free Play)
Corsario (Free Play)
Creature from the Black Lagoon L-4C (competition MOD) (updated with LED Ghost Fix)
Demolition Man LX-4C (competition MOD) (updated and also now includes LED Ghost Fix)
Demolition Man H-6C (competition MOD) (updated)
Flintstones, The LX-3
Iron Man 1.85(+Vault Edition)
Junk Yard 1.2C (competition MOD) (updated)
Lap By Lap (Free Play)
Lord of the Rings, The 3.00
Moon Light (Free Play)
Mundial 90 (Free Play)
Oba-Oba (old hardware)
Pool Sharks LA-7C (competition MOD) (updated)
Space Train (old hardware)
Spider-Man 1.02 (English, French)
Star Trek 25th Anniversary 3.00 (unofficial MOD)
Striker Xtreme 1.00 (Italian)
Theatre of Magic 1.3XC (competition MOD) (updated)
Twilight Zone L-5, LA-9 (aka PAPA Tournament Version 9.0)

Correct Dumps:
Time Machine (LTD, 4 players) - confirmed that currently supported ROMs are correct
Twilight Zone P-3, P-4 (using later U14 and U15 sound ROMs, only PA-1 uses SP-1 sound)



Version 3.2 (October 6th, 2019) - "Sounds good II"
------------------------------------------------------------------------------
